crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D407_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
sections.py:42:5: D407 [*] Missing dashed underline after section ("Returns")
   |
40 |   @expect("D407: Missing dashed underline after section ('Returns')")
41 |   def no_underline():  # noqa: D416
42 |       """Toggle the gizmo.
   |  _____^
43 | | 
44 | |     Returns
45 | |     A value of some sort.
46 | | 
47 | |     """
   | |_______^ D407
   |
   = help: Add dashed line under "Returns"

ℹ Fix
42 42 |     """Toggle the gizmo.
43 43 | 
44 44 |     Returns
   45 |+    -------
45 46 |     A value of some sort.
46 47 | 
47 48 |     """

sections.py:54:5: D407 [*] Missing dashed underline after section ("Returns")
   |
52 |   @expect("D414: Section has no content ('Returns')")
53 |   def no_underline_and_no_description():  # noqa: D416
54 |       """Toggle the gizmo.
   |  _____^
55 | | 
56 | |     Returns
57 | | 
58 | |     """
   | |_______^ D407
   |
   = help: Add dashed line under "Returns"

ℹ Fix
54 54 |     """Toggle the gizmo.
55 55 | 
56 56 |     Returns
   57 |+    -------
57 58 | 
58 59 |     """
59 60 | 

sections.py:65:5: D407 [*] Missing dashed underline after section ("Returns")
   |
63 |   @expect("D414: Section has no content ('Returns')")
64 |   def no_underline_and_no_newline():  # noqa: D416
65 |       """Toggle the gizmo.
   |  _____^
66 | | 
67 | |     Returns"""
   | |______________^ D407
   |
   = help: Add dashed line under "Returns"

ℹ Fix
64 64 | def no_underline_and_no_newline():  # noqa: D416
65 65 |     """Toggle the gizmo.
66 66 | 
67    |-    Returns"""
   67 |+    Returns
   68 |+    -------"""
68 69 | 
69 70 | 
70 71 | @expect(_D213)

sections.py:216:5: D407 [*] Missing dashed underline after section ("Raises")
    |
214 |   @expect("D407: Missing dashed underline after section ('Raises')")
215 |   def multiple_sections():  # noqa: D416
216 |       """Toggle the gizmo.
    |  _____^
217 | | 
218 | |     Short summary
219 | |     -------------
220 | | 
221 | |     This is the function's description, which will also specify what it
222 | |     returns.
223 | | 
224 | |     Returns
225 | |     ------
226 | |     Many many wonderful things.
227 | |     Raises:
228 | |     My attention.
229 | | 
230 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Raises"

ℹ Fix
225 225 |     ------
226 226 |     Many many wonderful things.
227 227 |     Raises:
    228 |+    ------
228 229 |     My attention.
229 230 | 
230 231 |     """

sections.py:261:5: D407 [*] Missing dashed underline after section ("Args")
    |
259 |   @expect("D414: Section has no content ('Returns')")
260 |   def valid_google_style_section():  # noqa: D406, D407
261 |       """Toggle the gizmo.
    |  _____^
262 | | 
263 | |     Args:
264 | |         note: A random string.
265 | | 
266 | |     Returns:
267 | | 
268 | |     Raises:
269 | |         RandomError: A random error that occurs randomly.
270 | | 
271 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Args"

ℹ Fix
261 261 |     """Toggle the gizmo.
262 262 | 
263 263 |     Args:
    264 |+    ----
264 265 |         note: A random string.
265 266 | 
266 267 |     Returns:

sections.py:261:5: D407 [*] Missing dashed underline after section ("Returns")
    |
259 |   @expect("D414: Section has no content ('Returns')")
260 |   def valid_google_style_section():  # noqa: D406, D407
261 |       """Toggle the gizmo.
    |  _____^
262 | | 
263 | |     Args:
264 | |         note: A random string.
265 | | 
266 | |     Returns:
267 | | 
268 | |     Raises:
269 | |         RandomError: A random error that occurs randomly.
270 | | 
271 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Returns"

ℹ Fix
264 264 |         note: A random string.
265 265 | 
266 266 |     Returns:
    267 |+    -------
267 268 | 
268 269 |     Raises:
269 270 |         RandomError: A random error that occurs randomly.

sections.py:261:5: D407 [*] Missing dashed underline after section ("Raises")
    |
259 |   @expect("D414: Section has no content ('Returns')")
260 |   def valid_google_style_section():  # noqa: D406, D407
261 |       """Toggle the gizmo.
    |  _____^
262 | | 
263 | |     Args:
264 | |         note: A random string.
265 | | 
266 | |     Returns:
267 | | 
268 | |     Raises:
269 | |         RandomError: A random error that occurs randomly.
270 | | 
271 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Raises"

ℹ Fix
266 266 |     Returns:
267 267 | 
268 268 |     Raises:
    269 |+    ------
269 270 |         RandomError: A random error that occurs randomly.
270 271 | 
271 272 |     """

sections.py:278:5: D407 [*] Missing dashed underline after section ("Args")
    |
276 |           "('Args:', not 'Args')")
277 |   def missing_colon_google_style_section():  # noqa: D406, D407
278 |       """Toggle the gizmo.
    |  _____^
279 | | 
280 | |     Args
281 | |         note: A random string.
282 | | 
283 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Args"

ℹ Fix
278 278 |     """Toggle the gizmo.
279 279 | 
280 280 |     Args
    281 |+    ----
281 282 |         note: A random string.
282 283 | 
283 284 |     """

sections.py:293:9: D407 [*] Missing dashed underline after section ("Args")
    |
292 |       def bar(y=2):  # noqa: D207, D213, D406, D407
293 |           """Nested function test for docstrings.
    |  _________^
294 | | 
295 | |         Will this work when referencing x?
296 | | 
297 | |         Args:
298 | |             x: Test something
299 | | that is broken.
300 | | 
301 | |         """
    | |___________^ D407
302 |           print(x)
    |
    = help: Add dashed line under "Args"

ℹ Fix
295 295 |         Will this work when referencing x?
296 296 | 
297 297 |         Args:
    298 |+        ----
298 299 |             x: Test something
299 300 | that is broken.
300 301 | 

sections.py:310:5: D407 [*] Missing dashed underline after section ("Args")
    |
308 |           "'test_missing_google_args' docstring)")
309 |   def test_missing_google_args(x=1, y=2, _private=3):  # noqa: D406, D407
310 |       """Toggle the gizmo.
    |  _____^
311 | | 
312 | |     Args:
313 | |         x (int): The greatest integer.
314 | | 
315 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Args"

ℹ Fix
310 310 |     """Toggle the gizmo.
311 311 | 
312 312 |     Args:
    313 |+    ----
313 314 |         x (int): The greatest integer.
314 315 | 
315 316 |     """

sections.py:322:9: D407 [*] Missing dashed underline after section ("Args")
    |
321 |       def test_method(self, test, another_test, _):  # noqa: D213, D407
322 |           """Test a valid args section.
    |  _________^
323 | | 
324 | |         Args:
325 | |             test: A parameter.
326 | |             another_test: Another parameter.
327 | | 
328 | |         """
    | |___________^ D407
329 |   
330 |       @expect("D417: Missing argument descriptions in the docstring "
    |
    = help: Add dashed line under "Args"

ℹ Fix
322 322 |         """Test a valid args section.
323 323 | 
324 324 |         Args:
    325 |+        ----
325 326 |             test: A parameter.
326 327 |             another_test: Another parameter.
327 328 | 

sections.py:334:9: D407 [*] Missing dashed underline after section ("Args")
    |
332 |               "'test_missing_args' docstring)", arg_count=5)
333 |       def test_missing_args(self, test, x, y, z=3, _private_arg=3):  # noqa: D213, D407
334 |           """Test a valid args section.
    |  _________^
335 | | 
336 | |         Args:
337 | |             x: Another parameter.
338 | | 
339 | |         """
    | |___________^ D407
340 |   
341 |       @classmethod
    |
    = help: Add dashed line under "Args"

ℹ Fix
334 334 |         """Test a valid args section.
335 335 | 
336 336 |         Args:
    337 |+        ----
337 338 |             x: Another parameter.
338 339 | 
339 340 |         """

sections.py:346:9: D407 [*] Missing dashed underline after section ("Args")
    |
344 |               "'test_missing_args_class_method' docstring)", arg_count=5)
345 |       def test_missing_args_class_method(cls, test, x, y, _, z=3):  # noqa: D213, D407
346 |           """Test a valid args section.
    |  _________^
347 | | 
348 | |         Args:
349 | |             x: Another parameter. The parameter below is missing description.
350 | |             y:
351 | | 
352 | |         """
    | |___________^ D407
353 |   
354 |       @staticmethod
    |
    = help: Add dashed line under "Args"

ℹ Fix
346 346 |         """Test a valid args section.
347 347 | 
348 348 |         Args:
    349 |+        ----
349 350 |             x: Another parameter. The parameter below is missing description.
350 351 |             y:
351 352 | 

sections.py:359:9: D407 [*] Missing dashed underline after section ("Args")
    |
357 |               "'test_missing_args_static_method' docstring)", arg_count=4)
358 |       def test_missing_args_static_method(a, x, y, _test, z=3):  # noqa: D213, D407
359 |           """Test a valid args section.
    |  _________^
360 | | 
361 | |         Args:
362 | |             x: Another parameter.
363 | | 
364 | |         """
    | |___________^ D407
365 |   
366 |       @staticmethod
    |
    = help: Add dashed line under "Args"

ℹ Fix
359 359 |         """Test a valid args section.
360 360 | 
361 361 |         Args:
    362 |+        ----
362 363 |             x: Another parameter.
363 364 | 
364 365 |         """

sections.py:371:9: D407 [*] Missing dashed underline after section ("Args")
    |
369 |               "'test_missing_docstring' docstring)", arg_count=2)
370 |       def test_missing_docstring(a, b):  # noqa: D213, D407
371 |           """Test a valid args section.
    |  _________^
372 | | 
373 | |         Args:
374 | |             a:
375 | | 
376 | |         """
    | |___________^ D407
377 |   
378 |       @staticmethod
    |
    = help: Add dashed line under "Args"

ℹ Fix
371 371 |         """Test a valid args section.
372 372 | 
373 373 |         Args:
    374 |+        ----
374 375 |             a:
375 376 | 
376 377 |         """

sections.py:380:9: D407 [*] Missing dashed underline after section ("Args")
    |
378 |       @staticmethod
379 |       def test_hanging_indent(skip, verbose):  # noqa: D213, D407
380 |           """Do stuff.
    |  _________^
381 | | 
382 | |         Args:
383 | |             skip (:attr:`.Skip`):
384 | |                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
385 | |                 Etiam at tellus a tellus faucibus maximus. Curabitur tellus
386 | |                 mauris, semper id vehicula ac, feugiat ut tortor.
387 | |             verbose (bool):
388 | |                 If True, print out as much information as possible.
389 | |                 If False, print out concise "one-liner" information.
390 | | 
391 | |         """
    | |___________^ D407
    |
    = help: Add dashed line under "Args"

ℹ Fix
380 380 |         """Do stuff.
381 381 | 
382 382 |         Args:
    383 |+        ----
383 384 |             skip (:attr:`.Skip`):
384 385 |                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
385 386 |                 Etiam at tellus a tellus faucibus maximus. Curabitur tellus

sections.py:499:9: D407 [*] Missing dashed underline after section ("Args")
    |
497 |               "'test_incorrect_indent' docstring)", arg_count=3)
498 |       def test_incorrect_indent(self, x=1, y=2):  # noqa: D207, D213, D407
499 |           """Reproducing issue #437.
    |  _________^
500 | | 
501 | | Testing this incorrectly indented docstring.
502 | | 
503 | |         Args:
504 | |             x: Test argument.
505 | | 
506 | |         """
    | |___________^ D407
    |
    = help: Add dashed line under "Args"

ℹ Fix
501 501 | Testing this incorrectly indented docstring.
502 502 | 
503 503 |         Args:
    504 |+        ----
504 505 |             x: Test argument.
505 506 | 
506 507 |         """

sections.py:519:5: D407 [*] Missing dashed underline after section ("Parameters")
    |
518 |   def replace_equals_with_dash():
519 |       """Equal length equals should be replaced with dashes.
    |  _____^
520 | | 
521 | |     Parameters
522 | |     ==========
523 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Parameters"

ℹ Fix
519 519 |     """Equal length equals should be replaced with dashes.
520 520 | 
521 521 |     Parameters
522     |-    ==========
    522 |+    ----------
523 523 |     """
524 524 | 
525 525 | 

sections.py:527:5: D407 [*] Missing dashed underline after section ("Parameters")
    |
526 |   def replace_equals_with_dash2():
527 |       """Here, the length of equals is not the same.
    |  _____^
528 | | 
529 | |     Parameters
530 | |     ===========
531 | |     """
    | |_______^ D407
    |
    = help: Add dashed line under "Parameters"

ℹ Fix
527 527 |     """Here, the length of equals is not the same.
528 528 | 
529 529 |     Parameters
    530 |+    ----------
530 531 |     ===========
531 532 |     """
532 533 | 


