crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D408_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: SectionUnderlineAfterName
    body: "Section underline should be in the line following the section's name (\"Returns\")"
    suggestion: "Add underline to \"Returns\""
    fixable: true
  location:
    row: 94
    column: 4
  end_location:
    row: 101
    column: 7
  fix:
    edits:
      - location:
          row: 97
          column: 0
        end_location:
          row: 98
          column: 0
        content: ~
  parent: ~

