crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D409_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- - kind:
      name: SectionUnderlineMatchesSectionLength
      body: "Section underline should match the length of its name (\"Returns\")"
      suggestion: "Adjust underline length to match \"Returns\""
      fixable: true
    location:
      row: 108
      column: 4
    end_location:
      row: 114
      column: 7
    fix:
      content: "    -------\n"
      location:
        row: 111
        column: 0
      end_location:
        row: 112
        column: 0
    parent: ~
  - kind:
      name: SectionUnderlineMatchesSectionLength
      body: "Section underline should match the length of its name (\"Returns\")"
      suggestion: "Adjust underline length to match \"Returns\""
      fixable: true
    location:
      row: 216
      column: 4
    end_location:
      row: 230
      column: 7
    fix:
      content: "    -------\n"
      location:
        row: 225
        column: 0
      end_location:
        row: 226
        column: 0
    parent: ~

