crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D410_D410.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
D410.py:2:5: D410 [*] Missing blank line after section ("Parameters")
   |
 1 |   def f(a: int, b: int) -> int:
 2 |       """Showcase function.
   |  _____^
 3 | | 
 4 | |     Parameters
 5 | |     ----------
 6 | |     a : int
 7 | |         _description_
 8 | |     b : int
 9 | |         _description_
10 | |     Returns
11 | |     -------
12 | |     int
13 | |         _description
14 | |     """
   | |_______^ D410
15 |       return b - a
   |
   = help: Add blank line after "Parameters"

ℹ Fix
7  7  |         _description_
8  8  |     b : int
9  9  |         _description_
   10 |+
10 11 |     Returns
11 12 |     -------
12 13 |     int

D410.py:19:5: D410 [*] Missing blank line after section ("Parameters")
   |
18 |   def f() -> int:
19 |       """Showcase function.
   |  _____^
20 | | 
21 | |     Parameters
22 | |     ----------
23 | |     Returns
24 | |     -------
25 | |     """
   | |_______^ D410
   |
   = help: Add blank line after "Parameters"

ℹ Fix
20 20 | 
21 21 |     Parameters
22 22 |     ----------
   23 |+
23 24 |     Returns
24 25 |     -------
25 26 |     """


