crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D411_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/sections.py:76:5: D411 [*] Missing blank line before section ("Yields")
   |
76 |   @expect("D414: Section has no content ('Yields')")
77 |   def consecutive_sections():  # noqa: D416
78 |       """Toggle the gizmo.
   |  _____^
79 | | 
80 | |     Returns
81 | |     -------
82 | |     Yields
83 | |     ------
84 | | 
85 | |     Raises
86 | |     ------
87 | |     Questions.
88 | | 
89 | |     """
   | |_______^ D411
   |
   = help: Add blank line before "Yields"

ℹ Suggested fix
77 77 | 
78 78 |     Returns
79 79 |     -------
   80 |+
80 81 |     Yields
81 82 |     ------
82 83 | 

./resources/test/fixtures/pydocstyle/sections.py:131:5: D411 [*] Missing blank line before section ("Returns")
    |
131 |   @expect("D411: Missing blank line before section ('Returns')")
132 |   def no_blank_line_before_section():  # noqa: D416
133 |       """Toggle the gizmo.
    |  _____^
134 | | 
135 | |     The function's description.
136 | |     Returns
137 | |     -------
138 | |     A value of some sort.
139 | | 
140 | |     """
    | |_______^ D411
    |
    = help: Add blank line before "Returns"

ℹ Suggested fix
131 131 |     """Toggle the gizmo.
132 132 | 
133 133 |     The function's description.
    134 |+
134 135 |     Returns
135 136 |     -------
136 137 |     A value of some sort.

./resources/test/fixtures/pydocstyle/sections.py:216:5: D411 [*] Missing blank line before section ("Raises")
    |
216 |   @expect("D407: Missing dashed underline after section ('Raises')")
217 |   def multiple_sections():  # noqa: D416
218 |       """Toggle the gizmo.
    |  _____^
219 | | 
220 | |     Short summary
221 | |     -------------
222 | | 
223 | |     This is the function's description, which will also specify what it
224 | |     returns.
225 | | 
226 | |     Returns
227 | |     ------
228 | |     Many many wonderful things.
229 | |     Raises:
230 | |     My attention.
231 | | 
232 | |     """
    | |_______^ D411
    |
    = help: Add blank line before "Raises"

ℹ Suggested fix
224 224 |     Returns
225 225 |     ------
226 226 |     Many many wonderful things.
    227 |+
227 228 |     Raises:
228 229 |     My attention.
229 230 | 


