crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D412_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/sections.py:216:5: D412 [*] No blank lines allowed between a section header and its content ("Short summary")
    |
216 |   @expect("D407: Missing dashed underline after section ('Raises')")
217 |   def multiple_sections():  # noqa: D416
218 |       """Toggle the gizmo.
    |  _____^
219 | | 
220 | |     Short summary
221 | |     -------------
222 | | 
223 | |     This is the function's description, which will also specify what it
224 | |     returns.
225 | | 
226 | |     Returns
227 | |     ------
228 | |     Many many wonderful things.
229 | |     Raises:
230 | |     My attention.
231 | | 
232 | |     """
    | |_______^ D412
    |
    = help: Remove blank line(s)

ℹ Suggested fix
217 217 | 
218 218 |     Short summary
219 219 |     -------------
220     |-
221 220 |     This is the function's description, which will also specify what it
222 221 |     returns.
223 222 | 


