crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D413_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/sections.py:65:5: D413 [*] Missing blank line after last section ("Returns")
   |
65 |   @expect("D414: Section has no content ('Returns')")
66 |   def no_underline_and_no_newline():  # noqa: D416
67 |       """Toggle the gizmo.
   |  _____^
68 | | 
69 | |     Returns"""
   | |______________^ D413
   |
   = help: Add blank line after "Returns"

ℹ Suggested fix
64 64 | def no_underline_and_no_newline():  # noqa: D416
65 65 |     """Toggle the gizmo.
66 66 | 
67    |-    Returns"""
   67 |+    Returns
   68 |+    """
68 69 | 
69 70 | 
70 71 | @expect(_D213)


